# goose

./: .cursorrules  .gitignore  .goosehints  404.html  ACCEPTABLE_USAGE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  README.md  SECURITY.md  download_cli.sh  index.html  inkeepChatButton.js  inkeepSearchBar.js  justfile  mkdocs.yml  pyproject.toml  run_cross_local.md  servers.json  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-cli.yml  canary.yml  (+16 more)
.husky/: pre-commit
.intersect/: intersect-config.yaml
blog/: atom.xml  index.html  rss.xml
crates/goose/: Cargo.toml  build.rs
crates/goose-bench/: Cargo.toml
crates/goose-bench/src/: bench_config.rs  bench_session.rs  bench_work_dir.rs  error_capture.rs  lib.rs  reporting.rs  utilities.rs  work_dir.rs
crates/goose-bench/src/assets/: kubernetes.patch  vscode.patch
crates/goose-bench/src/eval_suites/: evaluation.rs  factory.rs  metrics.rs  mod.rs  utils.rs
crates/goose-bench/src/eval_suites/core/: create_file.rs  example.rs  image.rs  list_files.rs  mod.rs  save_fact.rs  script.rs  search_replace.rs  web_scrape.rs
crates/goose-bench/src/eval_suites/core/computercontroller/: mod.rs  script.rs  web_scrape.rs
crates/goose-bench/src/eval_suites/core/developer/: create_file.rs  list_files.rs  mod.rs  simple_repo_clone_test.rs
crates/goose-bench/src/eval_suites/core/developer_image/: image.rs
crates/goose-bench/src/eval_suites/core/developer_search_replace/: mod.rs  search_replace.rs
crates/goose-bench/src/eval_suites/core/memory/: mod.rs  save_fact.rs
crates/goose-bench/src/eval_suites/vibes/: blog_summary.rs  flappy_bird.rs  goose_wiki.rs  mod.rs  restaurant_research.rs  squirrel_census.rs
crates/goose-bench/src/runners/: bench_runner.rs  eval_runner.rs  mod.rs  model_runner.rs
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs  cli_prompt.rs  lib.rs  log_usage.rs  logging.rs  main.rs  prompt.rs  recipe.rs  session.rs  test_helpers.rs
crates/goose-cli/src/commands/: agent_version.rs  bench.rs  configure.rs  info.rs  mcp.rs  mod.rs  recipe.rs  session.rs  update.rs  version.rs
crates/goose-cli/src/prompt/: renderer.rs  rustyline.rs  thinking.rs
crates/goose-cli/src/session/: builder.rs  completion.rs  input.rs  mod.rs  output.rs  storage.rs  thinking.rs
crates/goose-ffi/: Cargo.toml  README.md  build.rs
crates/goose-ffi/examples/: goose_agent.py
crates/goose-ffi/include/: goose_ffi.h
crates/goose-ffi/src/: lib.rs
crates/goose-mcp/: Cargo.toml  README.md
crates/goose-mcp/examples/: mcp.rs
crates/goose-mcp/src/: lib.rs
crates/goose-mcp/src/computercontroller/: document_tool.rs  docx_tool.rs  mod.rs  pdf_tool.rs  presentation_tool.rs  xlsx_tool.rs
crates/goose-mcp/src/computercontroller/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/goose-mcp/src/developer/: lang.rs  mod.rs  shell.rs
crates/goose-mcp/src/developer/prompts/: unit_test.json
crates/goose-mcp/src/google_drive/: mod.rs  oauth_pkce.rs  storage.rs  token_storage.rs
crates/goose-mcp/src/jetbrains/: mod.rs  proxy.rs
crates/goose-mcp/src/memory/: mod.rs
crates/goose-mcp/src/nondeveloper/: mod.rs
crates/goose-mcp/src/tutorial/: mod.rs
crates/goose-mcp/src/tutorial/tutorials/: build-mcp-extension.md  first-game.md
crates/goose-server/: ALLOWLIST.md  Cargo.toml  build.rs
crates/goose-server/src/: configuration.rs  error.rs  lib.rs  logging.rs  main.rs  openapi.rs  state.rs
crates/goose-server/src/commands/: agent.rs  mcp.rs  mod.rs
crates/goose-server/src/routes/: agent.rs  config_management.rs  configs.rs  context.rs  extension.rs  health.rs  mod.rs  providers_and_keys.json  recipe.rs  reply.rs  secrets.rs  session.rs  utils.rs
crates/goose-server/ui/desktop/: openapi.json
crates/goose/benches/: tokenization_benchmark.rs
crates/goose/examples/: agent.rs  databricks_oauth.rs  image_tool.rs
crates/goose/src/: lib.rs  memory_condense.rs  message.rs  model.rs  prompt_template.rs  token_counter.rs  truncate.rs
crates/goose/src/agents/: agent.rs  capabilities.rs  context.rs  extension.rs  extension_manager.rs  factory.rs  mod.rs  permission_judge.rs  permission_store.rs  platform_tools.rs  prompt_manager.rs  reference.rs  reply_parts.rs  summarize.rs  tool_execution.rs  truncate.rs  types.rs
crates/goose/src/config/: base.rs  experiments.rs  extensions.rs  mod.rs  permission.rs
crates/goose/src/context_mgmt/: common.rs  mod.rs  summarize.rs  truncate.rs
crates/goose/src/message/: tool_result_serde.rs
crates/goose/src/permission/: mod.rs  permission_confirmation.rs  permission_judge.rs
crates/goose/src/prompts/: mock.md  plan.md  recipe.md  system.md  system_gpt_4.1.md
crates/goose/src/providers/: anthropic.rs  azure.rs  base.rs  bedrock.rs  databricks.rs  errors.rs  factory.rs  gcpauth.rs  gcpvertexai.rs  google.rs  groq.rs  mod.rs  oauth.rs  ollama.rs  openai.rs  openrouter.rs  toolshim.rs  utils.rs  vertexai.rs
crates/goose/src/providers/formats/: anthropic.rs  bedrock.rs  databricks.rs  gcpvertexai.rs  google.rs  mod.rs  openai.rs  vertexai.rs
crates/goose/src/recipe/: mod.rs
crates/goose/src/session/: info.rs  mod.rs  storage.rs
crates/goose/src/tracing/: langfuse_layer.rs  mod.rs  observation_layer.rs
crates/goose/tests/: agent.rs  providers.rs  truncate_agent.rs
docs/: configuration.md  index.md  installation.md  quickstart.md
documentation/: docusaurus.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
examples/: frontend_tools.py
examples/mcp-wiki/: README.md  pyproject.toml
examples/mcp-wiki/src/mcp_wiki/: __init__.py  __main__.py  server.py
extensions/: index.html
extensions-site/: README.md  package.json  react-router.config.ts  tailwind.config.ts  vite.config.ts
install-link-generator/: script.js
markdown-page/: index.html
overrides/: social-meta-inject.html
prompt-library/: index.html
scripts/: README.md  parse-benchmark-results.sh  run-benchmarks.sh  setup_langfuse.sh
tests/: test_profile.py
(+878 files in other folders)
