[package]
name = "goose-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true


[dependencies]
anyhow = "1.0"
paste = "1.0"
ctor = "0.2.7"
goose = { path = "../goose" }
mcp-core = { path = "../mcp-core" }
async-trait = "0.1.86"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
tokio = { version = "1.43", features = ["full"] }
include_dir = "0.7.4"
once_cell = "1.19"
regex = "1.11.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred"] }