[package]
name = "goose-ffi"
build = "build.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "goose_ffi"
crate-type = ["cdylib"]

[dependencies]
goose = { path = "../goose" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
once_cell = "1.18"

[build-dependencies]
cbindgen = "0.24.0"
